<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Voice Controller for Spotify (BETA)</string>
    <string name="action_settings">Settings</string>
    <string name="action_playlist">Rename playlists</string>
    <string name="action_commands">Rename media commands</string>
    <string name="action_help">Help</string>
    <string name="action_donate">Donate</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="sign_in">SIGN IN</string>
    <string name="logout">Logout</string>
    <string name="not_premium_account">Sorry, we only support Spotify Premium accounts.</string>
    <string name="could_not_play_title">Could not play song.</string>
    <string name="login_to_play_songs">Your must be logged in on Voice Controller for Spotify to be able to play songs on native player.</string>
    <string name="use_native_player">Use native player</string>
    <string name="use_native_player_desc">(BETA) Native player is more reliable than Spotify App when it is not initialized.</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="blur_images">Blur album images</string>
    <string name="blur_images_desc">Increase or reduce the blur on album artwork.</string>
    <string name="confirmation_time">Confirmation time</string>
    <string name="confirmation_time_desc">The amount of seconds that the confirmation dialog should have.</string>
    <string name="title_help">Assigning to a voice action</string>
    <string name="help_1">1. Open Android Wear App.</string>
    <string name="help_2">2. Click on \"Play music\" and select Voice Controller for Spotify. If you can\'t see the app in the list, try rebooting your smartwatch for it to sync.</string>
    <string name="help_3">Done! Now, just say \"OK, Google\" on your Android Wear device and then \"Play …\" with a song name to start the playback on your phone.</string>
    <string name="help_description_image">Image showing voice controller selected on Android Wear app.</string>
    <string name="track_not_found_title">Song not found</string>
    <string name="track_not_found_desc">Your query had no matches.</string>
    <string name="similarity_percentage">Playlist name similarity</string>
    <string name="similarity_percentage_desc">How similar should be the playlist name and the query for them to be matched</string>
    <string name="rename">Rename</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="rename_playlist_dialog_title">Playlist Voice Name</string>
    <string name="rename_playlist_dialog_desc">This action will not change the name on Spotify.</string>
    <string name="rename_command_dialog_title">Media Command Voice Name</string>
    <string name="rename_command_dialog_desc">Type the new name for this media command.</string>
    <string name="no_results_title">Oops… :(</string>
    <string name="no_results_description">Your query had no results. Want to try it again?</string>
    <string name="login_app_alert_title">Oops… :(</string>
    <string name="login_app_alert_description">Looks like you are not logged in the app.</string>

    <string-array name="donation_google_catalog_values">
        <item>1 US Dollars</item>
        <item>2 US Dollars</item>
        <item>5 US Dollars</item>
        <item>8 US Dollars</item>
        <item>15 US Dollars</item>
    </string-array>
    <string name="donation_paypal_item">Donation</string>

</resources>
