<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.voicecontroller.fragments.HelpFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/fragment_vertical_margin"
        android:paddingBottom="@dimen/fragment_vertical_margin"
        android:paddingLeft="@dimen/fragment_horizontal_margin"
        android:paddingRight="@dimen/fragment_horizontal_margin">

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/title_help"
            android:id="@+id/helpTv1"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:layout_marginBottom="10dp"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:text="@string/help_1"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:id="@+id/helpTv2"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/helpTv3"
            android:layout_marginTop="5dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:layout_marginBottom="5dp"
            android:text="@string/help_2" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:contentDescription="@string/help_description_image"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/help_select_android_wear"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
            android:id="@+id/helpTv4"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:text="@string/help_3" />

        </LinearLayout>
</ScrollView>